# ws-tools

./: AGENTS.md  Cargo.toml  Makefile  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  update-homebrew.yml
config/: tmux.conf
src/: commands.rs  config.rs  git.rs  main.rs  onboarding.rs  tmux.rs
texplore/: Cargo.toml
texplore/src/: main.rs
ws/: CHANGELOG.md  Cargo.toml  README.md
ws/config/: layout-toggle  lazygit.yml  tmux.conf
ws/src/: commands.rs  config.rs  git.rs  main.rs  onboarding.rs  tmux.rs
ws/src/commands/: ai.rs  config.rs  doctor.rs  git_workflow.rs  layout.rs  mod.rs  status.rs  update.rs  workspace.rs
