[package]
name = "ws"
version = "0.3.1"
edition.workspace = true
authors.workspace = true
description = "Workspace CLI for git worktrees with tmux layouts"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
anyhow = "1"
which = "6"
libc = "0.2"
ratatui = "0.29"
crossterm = "0.28"
dirs = "5"
serde_json = "1"
